# vgorode

./: Dockerfile.agent  Dockerfile.remote  Dockerfile.web  README.md  docker-compose.yml
agent/: Cargo.toml  cargo.toml
agent/src/: main.rs  routes.rs  state.rs
remote-core/: Cargo.toml
remote-core/src/: main.rs
web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/lib/: api.ts
web/app/store/: index.ts  useVgorodeStore.ts
web/public/: manifest.json  sw.js
