[package]
name = “vgorode-agent”
version = “1.0.0”
edition = “2021”
[[bin]]
name = “vgorode-agent”
path = “src/main.rs”
[dependencies]
tokio = { version = “1”, features = [“full”] }
axum = { version = “0.7”, features = [“json”] }
serde = { version = “1”, features = [“derive”] }
serde_json = “1”
tracing = “0.1”
tracing-subscriber = { version = “0.3”, features = [“env-filter”] }
tower-http = { version = “0.5”, features = [“cors”] }
